syntax = "proto3";

package crypto;

option go_package = "crypto-platform/shared/proto/crypto;pbCrypto";

service CryptoService {
  rpc GetPriceInfo(GetPriceInfoRequest) returns (GetPriceInfoResponse) {}
}

message GetPriceInfoRequest {
  string symbol = 1;
  bool is_refetch = 2;
}

message GetPriceInfoResponse {
  repeated PriceInfo price_infos = 1;
}

message PriceInfo {
  string symbol = 1;
  string exchange = 2;
  string last_updated_at = 3;
  double price = 4;
  double high = 5;
  double low = 6;
  double open = 7;
  double close = 8;
  double base_volume = 9;
  double quote_volume = 10;
  double change = 11;
  double change_percent = 12;
}
